using jumbotrons, glyphicons
My contribution

--- a/index.css
+++ b/index.css
@@ -3,12 +3,29 @@
 body {
 	background: url(https://raw.githubusercontent.com/Diviee/Group_72/a64a5756d1792187a0341be2a641a8873664814d/Materials/images/pattern-background-desktop.svg);
 	background-repeat: no-repeat;
-/*	background-size:  cover;*/
+	/*background-position: center;*/
 	margin: 0 auto;
-	padding: 50px;
+	padding: 2%;
 	text-align: center;
+	font-size: 11px;
 }
 
+#payment {
+	color: hsl(228, 45%, 44%); 
+}
+
+.white {
+	color: white;
+}
+
+.Summary-bold {
+	font-weight: bold;
+}
+
+.lead p {
+	font-weight: 100;
+	font-size: 1.123rem;
+}
 /*.attribution { 
 	font-size: 11px; text-align: center; 
 	color: hsl(228, 45%, 44%); 
