--- a/index.css
+++ b/index.css
@@ -40,13 +40,29 @@
 }
 .small-box a{
     margin-top: 20px;
-}
+	text-decoration: underline;
+	 color:#1E1FCD;
+} 
 .small-box a:hover{
-    text-decoration: underline;
-	color:#1E1FCD ;
+	text-decoration: none;
+	color:#3a0458b0 ;
 }
 .button{
-    background-color: white;
+    background-color:#1E1FCD;
+    border-radius:10px;
+    width: 80%; 
+    padding: 5px;
+    color: black;
+    margin-top:10px;
+    margin-bottom: 10px;
+    border: none;
+    border-radius: 10px;
+    padding: 10px;
+    cursor: pointer;
+    transition: all .3s ease-in-out;
+}
+.button1{
+    background-color:white ;
     border-radius:10px;
     width: 80%; 
     padding: 5px;
@@ -61,6 +77,10 @@
 }
 .button:hover {
     transform: scale(.9);
-    background-color:#1E1FCD;
+    background-color:#3a0458b0;
     color: white;
+}
+.button1:hover {
+    transform: scale(.9);
+    background-color:white;
 }
