--- a/index.css
+++ b/index.css
@@ -41,14 +41,14 @@
 .small-box a{
     margin-top: 20px;
 	text-decoration: underline;
-	 color:#1E1FCD;
+	 color:hsl(245, 75%, 52%);
 } 
 .small-box a:hover{
 	text-decoration: none;
-	color:#3a0458b0 ;
+	color:hsl(224, 23%, 55%) ;
 }
 .button{
-    background-color:#1E1FCD;
+    background-color:hsl(245, 75%, 52%);
     border-radius:10px;
     width: 80%; 
     padding: 5px;
@@ -77,7 +77,7 @@
 }
 .button:hover {
     transform: scale(.9);
-    background-color:#3a0458b0;
+    background-color:hsl(224, 23%, 55%);
     color: white;
 }
 .button1:hover {
