--- a/index.css
+++ b/index.css
@@ -1,63 +1,20 @@
-
-
-.container {
+body    {
     background-image: url("pattern-background-desktop.svg");
-    background-repeat: none;
+    background-repeat: no-repeat;
     background-size: cover;
-    max-width: 250%;
-    padding-top: 10opx;
-    padding-bottom: 30px;
-    margin-top: 1px;
-    margin-bottom: 100px;
-   
-
-}
-.wrapper{
-    position: relative;
+    width: 70%;
+    margin: 50px 150px 50px 150px;
+    padding-top: 0 auto;
+    padding-bottom: 0 auto;
 }
 
-
-*{
-    margin: 0;
-    padding: 0;
-  }
-  
-  .div1 {
-    background: linear-gradient(lightblue, white);
-    height: 50vh;
-  }
-  
-  .div2 {
-    margin-top: -300px;
-    background: aqua;
-    height: 50VH;
-    clip-path: url(#wave);
-    padding-top: 100px;
-    margin-bottom: -50px;
-    padding-top: -10%;
-    padding-left: 100px;
-    padding-right: 100px;
-    justify-content: center;
-    left: 0px;
-    right: 0px;
-    z-index: -1;
-
-  }
 .box-container{
-   background-color: white;
-   position: relative;
+    background-color: white;
     text-align: center;
-   max-width: 30%;
-   box-sizing: content-box;
-   width: 100%;
-   justify-content: center;
-   margin-top: 50px;
-   margin-left: auto;
-	margin-right: auto;
+    margin: 0px 300px 0px 300px;
     border:  none;
     border-radius: 10px;
     overflow: hidden;
-    z-index: 8;
     box-shadow: 1px 2px 2px 1px rgba(0, 0, 0, 0.13);
 }
 .box-container .banner{
@@ -103,22 +60,7 @@
     cursor: pointer;
     transition: all .3s ease-in-out;
 }
-.button{
-    background-color:hsl(245, 75%, 52%);
-    border-radius:10px;
-    width: 80%; 
-    padding: 5px;
-    color: black;
-    margin-top:10px;
-    margin-bottom: 10px;
-    border: none;
-    border-radius: 10px;
-    padding: 10px;
-    cursor: pointer;
-    transition: all .3s ease-in-out;
-}
-
-..button1{
+.button1{
     background-color:white ;
     border-radius:10px;
     width: 80%; 
@@ -140,4 +82,4 @@
 .button1:hover {
     transform: scale(.9);
     background-color:white;
-} 
+}
